--- a/d.html
+++ b/d.html
@@ -1570,7 +1570,7 @@
                 </div>
                 <div class="product__description rte quick-add-hidden">
                   <p>
-                    <a href="https://renzpulsa.biz/s/u/login/" title="Situs Slot COD4D">
+                    <a href="https://www.menangbos.bio/register?ref=QOGAABU1TI4" title="Situs Slot COD4D">
                       <img src="https://img.diveadvisor.com/photos/daftar-pg-soft-22289.jpg" data-mce-fragment="1" data-mce-src="https://static.wixstatic.com/media/cf8a8d_c9d6f87f1c1a4db2b1cffc8b1591e056~mv2.gif">
                     </a>
                   </p>
